syntax = "proto3";

package user;

option go_package = "github.com/originbenntou/E-Kitchen/proto/user";

import "google/protobuf/timestamp.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

message User {
    uint64 id = 1;
    string email = 2;
    bytes password_hash = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateUserRequest {
    string email = 1 [(validator.field) = {string_not_empty: true regex: "^\\w+([-+.]\\w+)*@\\w+([-.]\\w+)*\\.\\w+([-.]\\w+)*$"}];
    bytes password = 2 [(validator.field) = {string_not_empty: true length_gt:7 length_lt:33}];
}

message CreateUserResponse {
    User user = 1;
}

message VerifyUserRequest {
    string email = 1 [(validator.field) = {string_not_empty: true regex: "^\\w+([-+.]\\w+)*@\\w+([-.]\\w+)*\\.\\w+([-.]\\w+)*$"}];
    bytes password = 2 [(validator.field) = {string_not_empty: true length_gt:7 length_lt:33}];
}

message VerifyUserResponse {
    User user = 1;
}

message FindUserRequest {
    uint64 userId = 1 [(validator.field) = {string_not_empty: true int_gt: 1}];
}

message FindUserResponse {
    string email = 1;
}

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc VerifyUser (VerifyUserRequest) returns (VerifyUserResponse);
    rpc FindUser (FindUserRequest) returns (FindUserResponse);
}
